Fixed map flickering when changing between pages

--- a/static/main/css/style.css
+++ b/static/main/css/style.css
@@ -133,6 +133,8 @@ html, body {
     width: 100%;
     height: 100%;
     border: none;
+    display: block;
+    position: relative;
 }
 
 /*
